# GetUpSoft_Workspace

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  AGENT_REMOTE_LABS_ARCHITECTURE.md  CHANGE_TIMELINE.md  CLAUDE.md  CLOUDFLARE_PAGES_UPLOAD_GUIDE.md  CODEX.md  CODEX_WORK_VALIDATION.md  COMMIT_COMPARISON.md  CONTAINER_REMEDIATION_GUIDE.md  CURRENT_STATUS.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_COMPLETION_INSTRUCTIONS.md  DEPLOYMENT_INFRASTRUCTURE_PLAN_2026-05-26.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_PREP_2026-05-25.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_README.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_UPDATE.md  DEPLOY_NOW.md  DESPLIEGUE_SITIO_COMPLETO.md  DESPLIEGUE_SITIO_Y_CACHE.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SESSION_CHECKPOINT.md  GEMINI.md  GETUPSOFT_REDESIGN_SUMMARY.md  GITHUB_ACTIONS_COMPLETE.md  GITHUB_ACTIONS_MULTI_PROJECT.md  GITHUB_ACTIONS_QUICKSTART.md  GITHUB_ACTIONS_SETUP_GUIDE.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTACION_COPILOT.md  IMPLEMENT_REMOTE_LABS_STRATEGY.md  KUBERNETES_MIGRATION_PLAN.md  (+90 more)
03_AI_Automation/kaliman-mcp/: pyproject.toml
03_AI_Automation/kaliman-mcp/config/: mcp-servers.http.json
03_AI_Automation/kaliman-mcp/scripts/: start-stdio.ps1
03_AI_Automation/kaliman-mcp/src/kaliman_mcp/: __init__.py  server.py
03_AI_Automation/kaliman-mcp/tests/: test_service.py
apps/orca/: .env.example  .gitignore  AI_PROVIDERS_AUTH_GUIDE.md  API_KEYS_SETUP.md  Dockerfile  MODELS_SETUP.md  MODELS_TEST_REPORT.md  N8N_USE_CASES.md  WORKFLOW_TEMPLATES.md  env.gstack.example  env.gstack.local.example  extract_frames.ps1  patch.py  pyproject.toml
apps/orca/.github/workflows/: deploy.yml
apps/orca/config/: nvidia_build_free_models.json
apps/orca/deploy/: .env.example  docker-compose.yml  nginx-orca.conf.template
apps/orca/docs/: AI_PROVIDERS_SETUP.md  IMPLEMENTACION_SUMMARY.md  JARVIS_CLAP_DETECTION.md  JARVIS_IMPLEMENTACION.md  kubernetes.md
apps/orca/libs/hermes-agent/: toolsets.py
apps/orca/tests/: selenium_orca_functional.py  test_config.py  test_jobs.py  test_n8n_executor.py  test_n8n_importer.py  test_new_features.py  test_nvidia_catalog.py  test_user_credentials.py  test_webapp.py
apps/orca/workflow-editor/: .env.example  .gitignore  ACCESSIBILITY_STATEMENT.md  AGENT_CORE_INTEGRATION.md  CHANGE_TIMELINE.md  CONTINUATION_SESSION_SUMMARY.md  DEPLOYMENT_ACTION_PLAN.md  FINAL_SESSION_CHECKPOINT.md  INCIDENT_RESPONSE_RUNBOOK.md  LOCAL_ENVIRONMENT_SETUP.md  MONITORING_DASHBOARD_SETUP.md  ORCA_UI_UX_VALIDATION_REPORT.md  P2_COMPONENT_MIGRATION_CHECKLIST.md  P2_MIGRATION_GUIDE.md  P2_PHASE_SUMMARY.md  PHASE2_DEFERRED_TODOS.md  PHASE3_COMPLETION_REPORT.md  PHASE5_DEPLOYMENT.md  PHASE_10_FINAL_CHECKPOINT.md  PHASE_11_CODE_REVIEW_STANDARDS.md  PHASE_11_IMPLEMENTATION_GUIDE.md  PHASE_11_PERFORMANCE_BENCHMARKING.md  PHASE_11_READINESS_SUMMARY.md  PHASE_11_RISK_REGISTER.md  PHASE_11_SERVICE_WORKER_GUIDE.md  PHASE_11_STEP1_LAZY_LOADING_GUIDE.md  PHASE_11_STEP1_PLAN.md  PHASE_11_STEP2_PLAN.md  PHASE_11_STEP3_PLAN.md  PHASE_11_STEP4_ML_ALGORITHMS_GUIDE.md  PHASE_11_STEP4_PLAN.md  PHASE_11_STEP5_PLAN.md  PHASE_11_TEST_STRUCTURE.md  POST_DEPLOYMENT_QA_CHECKLIST.md  PRODUCTION_DEPLOYMENT_PLAN.md  PROFILING_AND_DEBUGGING_GUIDE.md  QA_CHECKLIST.txt  QA_PROCESS_README.md  QA_TESTING_INSTRUCTIONS.md  QA_UI_UX_AUDIT.md  (+128 more)
(+18205 files in other folders)
