[project]
name = "getupsoft-kaliman-mcp"
version = "0.1.0"
description = "Shared Kaliman downloader service and MCP server for GetUpSoft Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
kaliman-mcp = "kaliman_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
