[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orca"
version = "0.1.0"
description = "Servicio base para generar flujos de prueba, automatizaciones y scripts de interaccion con multiples modelos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<0.136.0",
  "httpx>=0.27.0",
  "notebooklm-py[browser]",
  "anthropic>=0.40.0",
  "openai>=1.30.0",
  "selenium>=4.25.0",
  "uvicorn>=0.30.0",
  "webdriver-manager>=4.0.2",
]

[project.scripts]
ai-orchestrator = "ai_automation_orchestrator.cli:main"
ai-orchestrator-api = "ai_automation_orchestrator.webapp:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
notebooklm-py = { git = "https://github.com/teng-lin/notebooklm-py.git" }
