[project]
name = "odoo-addons-oca-iot"
version = "18.0.20240916.1"
dependencies = [
    "odoo-addon-iot_amqp_oca>=18.0dev,<18.1dev",
    "odoo-addon-iot_input_oca>=18.0dev,<18.1dev",
    "odoo-addon-iot_oca>=18.0dev,<18.1dev",
    "odoo-addon-iot_output_oca>=18.0dev,<18.1dev",
    "odoo-addon-iot_rule>=18.0dev,<18.1dev",
    "odoo-addon-iot_template_oca>=18.0dev,<18.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]